--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# Right Tool for the Job: Rebalanced
+<snippet>
+  <content><![CDATA[
+# ${1:Project Name}
 
 This mod adds 3 types of tools to the game to speed up specific areas of a colonists work speed. Pickaxes to
 make a colonist mine faster, Axes to make a colonist chop down trees faster, and Hammers to make colonists
@@ -21,21 +23,20 @@ These are all made at the 'Tool Construction Table' which requires Electricity r
 All tools and the toolbelts can be traded with traders.
 
 ## Installation
-
 - Unzip the contents and place them in your RimWorld/Mods folder.
 - Activate the mod in the mod menu in the game.
 
 ## History
-
-TODO: Write history
+(May 30th, 2017) - Initial Release 0.17.1.6
 
 ## Credits
-
 ItchyFlea: Original Mod
 Shinzy: Artwork
 Thundercraft: Original Rebalanced Fork
 Sixdd: Updated to A17 and Tweaked
 
 ## License
-
 CC By-SA 4.0
+]]></content>
+  <tabTrigger>readme</tabTrigger>
+</snippet>
