minor tweak with language file

--- a/Languages/English/DefInjected/ThingDefs/Buildings_ToolBench.xml
+++ b/Languages/English/DefInjected/ThingDefs/Buildings_ToolBench.xml
@@ -2,6 +2,6 @@
 <LanguageData>
 
 	<RTFTJToolBench.label>Tool Construction Bench</RTFTJToolBench.label>
-	<RTFTJToolBench.description>A table and tools for assembling tools.</RTFTJToolBench.description>
+	<RTFTJToolBench.description>A table and machinery for assembling tools.</RTFTJToolBench.description>
 
 </LanguageData>
